--- a/Encodings/CombineEncodings_analysis_regression.ipynb
+++ b/Encodings/CombineEncodings_analysis_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# results_dir = \"results/multiview_experiments_BRCA1_HUMAN_Fields2015_e3_LinearRegression\"\n",
-    "results_dir = \"results/multiview_experiments_avgfp_LinearRegression\""
+    "results_dir = \"results/multiview_experiments_avgfp_Ridge\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,33 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.5.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.25.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.15.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.1.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.05.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.03.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_One_hot_6_bit_0.01.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.5.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.25.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.15.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.1.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.05.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.03.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Binary_5_bit_0.01.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Hydrophobicity_matrix_0.5.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Hydrophobicity_matrix_0.25.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Hydrophobicity_matrix_0.15.pickle\n",
-      "results/multiview_experiments_avgfp_LinearRegression/pred_dict_concat_One_hot_Hydrophobicity_matrix_0.1.pickle\n"
-     ]
-    },
     {
      "ename": "EOFError",
      "evalue": "Ran out of input",
@@ -88,7 +64,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb Cell 4\u001b[0m in \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     global_pred_dict[enc1][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mresults_dir\u001b[39m}\u001b[39;00m\u001b[39m/pred_dict_\u001b[39m\u001b[39m{\u001b[39;00menc2\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mlabeled_size\u001b[39m}\u001b[39;00m\u001b[39m.pickle\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m     global_pred_dict[enc2][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39;49mload(f)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mresults_dir\u001b[39m}\u001b[39;00m\u001b[39m/pred_dict_concat_\u001b[39m\u001b[39m{\u001b[39;00menc1\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00menc2\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mlabeled_size\u001b[39m}\u001b[39;00m\u001b[39m.pickle\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mresults_dir\u001b[39m}\u001b[39;00m\u001b[39m/pred_dict_concat_\u001b[39m\u001b[39m{\u001b[39;00menc1\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00menc2\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mlabeled_size\u001b[39m}\u001b[39;00m\u001b[39m.pickle\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb Cell 4\u001b[0m in \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfor\u001b[39;00m labeled_size \u001b[39min\u001b[39;00m labeled_sizes:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mresults_dir\u001b[39m}\u001b[39;00m\u001b[39m/pred_dict_\u001b[39m\u001b[39m{\u001b[39;00menc1\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mlabeled_size\u001b[39m}\u001b[39;00m\u001b[39m.pickle\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m         global_pred_dict[enc1][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39;49mload(f)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mresults_dir\u001b[39m}\u001b[39;00m\u001b[39m/pred_dict_\u001b[39m\u001b[39m{\u001b[39;00menc2\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mlabeled_size\u001b[39m}\u001b[39;00m\u001b[39m.pickle\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/CombineEncodings_analysis_regression.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m         global_pred_dict[enc2][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39mload(f)\n",
       "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
      ]
     }
@@ -108,11 +84,11 @@
     "\n",
     "    for labeled_size in labeled_sizes:\n",
     "        with open(f'{results_dir}/pred_dict_{enc1}_{labeled_size}.pickle', 'rb') as f:\n",
+    "            print(f'{results_dir}/pred_dict_{enc1}_{labeled_size}.pickle')\n",
     "            global_pred_dict[enc1][labeled_size] = pkl.load(f)\n",
     "        with open(f'{results_dir}/pred_dict_{enc2}_{labeled_size}.pickle', 'rb') as f:\n",
     "            global_pred_dict[enc2][labeled_size] = pkl.load(f)\n",
     "        with open(f'{results_dir}/pred_dict_concat_{enc1}_{enc2}_{labeled_size}.pickle', 'rb') as f:\n",
-    "            print(f'{results_dir}/pred_dict_concat_{enc1}_{enc2}_{labeled_size}.pickle')\n",
     "            data = pkl.load(f)\n",
     "            global_pred_dict[\"concat-\"+enc1+\"-\"+enc2][labeled_size] = data\n",
     "            global_pred_dict[\"concat-\"+enc2+\"-\"+enc1][labeled_size] = data\n",
