--- a/Encodings/CombineEncodings_analysis_regression.ipynb
+++ b/Encodings/CombineEncodings_analysis_regression.ipynb
@@ -48,8 +48,8 @@
     "             \"Miyazawa_energies\", \"Micheletti_potentials\", \"AESNN3\",\n",
     "             \"ANN4D\", \"ProtVec\"]\n",
     "# Get list of tuples from combinations\n",
-    "labeled_sizes = [1, 0.5, 0.25, 0.15, 0.1, 0.05, 0.03, 0.01]\n",
-    "\n",
+    "# labeled_sizes = [1, 0.5, 0.25, 0.15, 0.1, 0.05, 0.03, 0.01]\n",
+    "labeled_sizes = [1, 0.75, 0.5, 0.25, 0.1, 0.05, 0.01]\n",
     "comb = list(combinations(encodings, 2))"
    ]
   },
@@ -397,8 +397,8 @@
     }
    ],
    "source": [
-    "labeled_sizes =  [1, 0.5, 0.25, 0.15, 0.1, 0.05, 0.03, 0.01]\n",
-    "# labeled_sizes =  [0.1]\n",
+    "labeled_sizes =  df['labeled_size'].unique()\n",
+    "\n",
     "for labeled_size in labeled_sizes:\n",
     "    \n",
     "    views =  [\"CoTraining\", \"Concat\", \"Stacking-mean\", \"View1\", \"View2\"]\n",
