--- a/Encodings/Bayesian_tests.ipynb
+++ b/Encodings/Bayesian_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "from itertools import combinations, permutations\n",
-    "from baycomp import two_on_multiple, HierarchicalTest\n"
+    "from baycomp import two_on_multiple, HierarchicalTest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,61 @@
     "             \"Meiler_parameters\", \"Acthely_factors\", \"PAM250\", \"BLOSUM62\",\n",
     "             \"Miyazawa_energies\", \"Micheletti_potentials\", \"AESNN3\",\n",
     "             \"ANN4D\"]\n",
-    "masks = [\"relative\", \"shannon\", \"lockless\", \"inverted_relative\", \"inverted_shannon\", \"inverted_lockless\", \"normalized_relative\", \"normalized_shannon\", \"normalized_lockless\", \"random\",\n",
-    "        \"variants_emphasis_weight_2\", \"variants_emphasis_weight_5\", \"variants_emphasis_weight_10\",\n",
-    "         #\"variants_emphasis_weight_100\"\n",
-    "         ]\n",
+    "masks = [\"relative\",\n",
+    "        \"relativex2\",\n",
+    "        \"relativex10\",\n",
+    "        \"relativex0.5\",\n",
+    "        \"relativex0.1\",\n",
+    "        \"shannon\",\n",
+    "        \"shannonx2\",\n",
+    "        \"shannonx10\",\n",
+    "        \"shannonx0.5\",\n",
+    "        \"shannonx0.1\",\n",
+    "        \"lockless\",\n",
+    "        \"locklessx2\",\n",
+    "        \"locklessx10\",\n",
+    "        \"locklessx0.5\",\n",
+    "        \"locklessx0.1\",\n",
+    "        \"1-shannon\",\n",
+    "        \"inverted_relative\",\n",
+    "        \"inverted_shannon\",\n",
+    "        \"inverted_lockless\",\n",
+    "        \"normalized_relative\",\n",
+    "        \"normalized_shannon\",\n",
+    "        \"normalized_lockless\",\n",
+    "        \"variants_emphasis_weight_0.25\",\n",
+    "        \"variants_emphasis_weight_0.5\",\n",
+    "        \"variants_emphasis_weight_0.75\",\n",
+    "        \"variants_emphasis_weight_1.5\",\n",
+    "        \"variants_emphasis_weight_2\",\n",
+    "        \"variants_emphasis_weight_5\",\n",
+    "        \"variants_gaussian_emphasis_weight_0.25\",\n",
+    "        \"variants_gaussian_emphasis_weight_0.5\",\n",
+    "        \"variants_gaussian_emphasis_weight_0.75\",\n",
+    "        \"variants_gaussian_emphasis_weight_1.5\",\n",
+    "        \"variants_gaussian_emphasis_weight_2\",\n",
+    "        \"variants_gaussian_emphasis_weight_5\",\n",
+    "        \"random\"]\n",
     "labeled_sizes_list = [1] #, 0.75, 0.5, 0.25, 0.1, 0.05, 0.03, 0.01]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'results/masking_experiments_0.6M_BMIMI_Ridge/pred_dict_One_hot_masked_relative/2_1.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb Cell 4\u001b[0m in \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m             global_pred_dict[enc][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m         \u001b[39mfor\u001b[39;00m mask \u001b[39min\u001b[39;00m masks:\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m             \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m{\u001b[39;49;00mdataset_results_dir\u001b[39m}\u001b[39;49;00m\u001b[39m/pred_dict_\u001b[39;49m\u001b[39m{\u001b[39;49;00menc\u001b[39m}\u001b[39;49;00m\u001b[39m_masked_\u001b[39;49m\u001b[39m{\u001b[39;49;00mmask\u001b[39m}\u001b[39;49;00m\u001b[39m_\u001b[39;49m\u001b[39m{\u001b[39;49;00mlabeled_size\u001b[39m}\u001b[39;49;00m\u001b[39m.pickle\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m                 global_pred_dict[\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00menc\u001b[39m}\u001b[39;00m\u001b[39m_masked_\u001b[39m\u001b[39m{\u001b[39;00mmask\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m][labeled_size] \u001b[39m=\u001b[39m pkl\u001b[39m.\u001b[39mload(f)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.168.168.50/home/jabarbero/MERGE/MultiencodingFitnessPrediction/Encodings/Bayesian_tests.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mfor\u001b[39;00m encoding, labeled_sizes \u001b[39min\u001b[39;00m global_pred_dict\u001b[39m.\u001b[39mitems():\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'results/masking_experiments_0.6M_BMIMI_Ridge/pred_dict_One_hot_masked_relative/2_1.pickle'"
+     ]
+    }
+   ],
    "source": [
     "experiments_type = \"masking_experiments\"\n",
     "# Create results dataframe\n",
@@ -82,12 +125,6 @@
     "                        mse = mean_squared_error(y_test, y_proba)\n",
     "                        rmse = np.sqrt(mse)\n",
     "                        spearman_r = spearmanr(y_test, y_proba)[0]\n",
-    "\n",
-    "                        if mask_value == \"variants_emphasis_weight_2\" and enc_value == \"One_hot_6_bit\":\n",
-    "                            print(\"Spearman r is\", spearman_r)\n",
-    "                            print(y_test)\n",
-    "                            print(y_proba)\n",
-    "                            break\n",
     "\n",
     "                        weighted_tau = weightedtau(y_test, y_proba)[0]\n",
     "                        enc_value = encoding.split(\"_masked\")[0]        \n",
@@ -160,7 +197,7 @@
     "            unmasked_matrix = np.array([np.array(x) for x in df_mask[df_mask[\"Mask\"] == \"unmasked\"][selected_metric].values]).T\n",
     "            masked_matrix = np.array([np.array(x) for x in df_mask[df_mask[\"Mask\"] == mask][selected_metric].values]).T\n",
     "            \n",
-    "            posterior = HierarchicalTest(unmasked_matrix, masked_matrix, rope=0.01)\n",
+    "            posterior = HierarchicalTest(unmasked_matrix, masked_matrix, rope=0.01);\n",
     "            fig = tern(posterior, l_tag=\"unmasked\", r_tag=mask)\n",
     "            # Change title\n",
     "            fig.axes[0].set_title(f\"{encoding}\\n{mask}\", fontsize=50)\n",
@@ -385,7 +422,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.16"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5f846180ea635b726345c5d1c5924730e4eae75f9c00483c60b47aa06388dcbf"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
